add mod_rpaf for apache

--- a/config/etc/httpd/conf/httpd-8080.conf
+++ b/config/etc/httpd/conf/httpd-8080.conf
@@ -199,6 +199,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule mem_cache_module modules/mod_mem_cache.so
 #LoadModule cgi_module modules/mod_cgi.so
 #LoadModule version_module modules/mod_version.so
+LoadModule rpaf_module modules/mod_rpaf-2.0.so
 
 #
 # The following modules are not loaded by default:
@@ -975,6 +976,10 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 NameVirtualHost *:8080
 #NameVirtualHost *:443
 
+RPAFenable On
+RPAFsethostname On
+RPAFproxy_ips 127.0.0.1
+RPAFheader X-Forwarded-For
 
 #
 # Load config files from the config directory "/etc/httpd/conf.d/vhosts".
