--- a/config/etc/monit.conf
+++ b/config/etc/monit.conf
@@ -35,6 +35,7 @@ set logfile /var/log/monit.log
 set httpd port 2812 and
   use address localhost  # only accept connection from localhost
   allow localhost        # allow localhost to connect to the server and
+  allow admin:Monit	 # allow checkout from admin
 
 
 ##############################################################################
