--- a/config/etc/httpd/conf.d/passenger.conf
+++ b/config/etc/httpd/conf.d/passenger.conf
@@ -1,6 +1,6 @@
-LoadModule passenger_module /opt/ruby-enterprise-1.8.6-20090610/lib/ruby/gems/1.8/gems/passenger-2.2.2/ext/apache2/mod_passenger.so
-PassengerRoot /opt/ruby-enterprise-1.8.6-20090610/lib/ruby/gems/1.8/gems/passenger-2.2.2
-PassengerRuby /opt/ruby-enterprise-1.8.6-20090610/bin/ruby
+LoadModule passenger_module /opt/ruby-enterprise-1.8.7-2009.10/lib/ruby/gems/1.8/gems/passenger-2.2.5/ext/apache2/mod_passenger.so
+PassengerRoot /opt/ruby-enterprise-1.8.7-2009.10/lib/ruby/gems/1.8/gems/passenger-2.2.5
+PassengerRuby /opt/ruby-enterprise-1.8.7-2009.10/bin/ruby
 
 PassengerDefaultUser rails
 RailsAutoDetect off
