--- a/config/etc/rkhunter.conf
+++ b/config/etc/rkhunter.conf
@@ -194,7 +194,7 @@ ALLOW_SSH_PROT_V1=0
 # tests, the test names, and how rkhunter behaves when these options are used.
 #
 ENABLE_TESTS="all"
-DISABLE_TESTS="additional_rkts suspscan hidden_procs deleted_files packet_cap_apps group_changes passwd_changes"
+DISABLE_TESTS="apps additional_rkts suspscan hidden_procs deleted_files packet_cap_apps group_changes passwd_changes"
 
 #
 # The HASH_FUNC option can be used to specify the command to use
