- add nginx with passenger module - add nginx-passenger configuration & install script

--- a/config/etc/monit.d/httpd.conf
+++ b/config/etc/monit.d/httpd.conf
@@ -1,7 +1,7 @@
 check process httpd with pidfile /var/run/httpd.pid
 	group www
-	start program = "/etc/init.d/httpd_fs start"
-	stop program = "/etc/init.d/httpd_fs stop"
+	start program = "/etc/init.d/httpd start"
+	stop program = "/etc/init.d/httpd stop"
 	if cpu is greater than 60% for 2 cycles then alert
 	if cpu > 80% for 5 cycles then restart
 	if totalmem > 80% for 2 cycles then restart
