auto config worker process nginx by cpu count#

--- a/config/etc/nginx/nginx.conf
+++ b/config/etc/nginx/nginx.conf
@@ -2,7 +2,7 @@
 user nginx nginx;
 
 # number of nginx workers
-worker_processes 1;
+worker_processes core_count;
 
 # Number of worker connections. 1024 is a good default
 events {
